--- a/application.yml
+++ b/application.yml
@@ -25,6 +25,8 @@ spring:
     open-in-view: false
     hibernate:
       ddl-auto: none
+      
+logging.level.org.springframework.cache: debug
 
 # Spring Boot 1.5 makes actuator secure by default
 management.security.enabled: false
