--- a/application.yml
+++ b/application.yml
@@ -25,7 +25,12 @@ spring:
     open-in-view: false
     hibernate:
       ddl-auto: none
-      
+  cache:
+    type: redis
+  data:
+    redis:
+      host: otelpoc.redis.cache.windows.net
+      password: oOJBBDDnH44cZ8KtlCwunIY1A9Rd1FaOZAzCaLRKGAY=
 
 # Spring Boot 1.5 makes actuator secure by default
 management.security.enabled: false
